--- a/src/Views/CustomerDetails.fxml
+++ b/src/Views/CustomerDetails.fxml
@@ -19,35 +19,30 @@
    <children>
       <VBox layoutX="117.0" layoutY="137.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Customer Details" wrappingWidth="325.0">
+            <Text fx:id="customerDetailsTitle" strokeType="OUTSIDE" strokeWidth="0.0" text="Customer Details" wrappingWidth="325.0">
                <font>
                   <Font size="24.0" />
                </font>
             </Text>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label prefHeight="31.0" prefWidth="80.0" text="Customer ID:" />
-                  <TextField disable="true" editable="false" prefWidth="200.0" promptText="Auto Generated" />
+                  <Label fx:id="customerIdLbl" prefHeight="31.0" prefWidth="80.0" text="Customer ID:" />
+                  <TextField fx:id="customerIdTextField" disable="true" editable="false" prefWidth="200.0" promptText="Auto Generated" />
                </children>
             </HBox>
-            <HBox prefHeight="25.0" prefWidth="280.0" spacing="10.0">
-               <children>
-                  <TextField promptText="First Name" />
-                  <TextField promptText="Last Name" />
-               </children>
-            </HBox>
-            <TextField prefHeight="25.0" prefWidth="325.0" promptText="Street Address" />
-            <ComboBox prefHeight="25.0" prefWidth="325.0" promptText="Country" />
+            <TextField fx:id="customerNameTextField" promptText="Full Name" />
+            <TextField fx:id="customerAddressTextField" prefHeight="25.0" prefWidth="325.0" promptText="Street Address" />
+            <ComboBox fx:id="countryComboBox" prefHeight="25.0" prefWidth="325.0" promptText="Country" />
             <HBox prefHeight="25.0" prefWidth="200.0" spacing="10.0">
                <children>
-                  <ComboBox prefHeight="25.0" prefWidth="200.0" promptText="State/Province" />
-                  <TextField promptText="Postal Code" />
+                  <ComboBox fx:id="stateProvinceComboBox" prefHeight="25.0" prefWidth="200.0" promptText="State/Province" />
+                  <TextField fx:id="postalCodeTextField" promptText="Postal Code" />
                </children>
             </HBox>
             <ButtonBar prefHeight="25.0" prefWidth="280.0">
               <buttons>
-                <Button defaultButton="true" mnemonicParsing="false" text="Submit" />
-                  <Button cancelButton="true" mnemonicParsing="false" text="Cancel" />
+                <Button fx:id="submitBtn" defaultButton="true" mnemonicParsing="false" onAction="#addCustomer" text="Submit" />
+                  <Button fx:id="cancelBtn" cancelButton="true" mnemonicParsing="false" onAction="#close" text="Cancel" />
               </buttons>
             </ButtonBar>
          </children>
