--- a/src/Views/CustomerDetails.fxml
+++ b/src/Views/CustomerDetails.fxml
@@ -12,40 +12,40 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CustomerDetails">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="305.0"
+            prefWidth="300.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controllers.CustomerDetails">
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
    </padding>
-   <children>
-      <VBox layoutX="117.0" layoutY="137.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Text fx:id="customerDetailsTitle" strokeType="OUTSIDE" strokeWidth="0.0" text="Customer Details" wrappingWidth="325.0">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Text>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label fx:id="customerIdLbl" prefHeight="31.0" prefWidth="80.0" text="Customer ID:" />
-                  <TextField fx:id="customerIdTextField" disable="true" editable="false" prefWidth="200.0" promptText="Auto Generated" />
-               </children>
-            </HBox>
-            <TextField fx:id="customerNameTextField" promptText="Full Name" />
-            <TextField fx:id="customerAddressTextField" prefHeight="25.0" prefWidth="325.0" promptText="Street Address" />
-            <ComboBox fx:id="countryComboBox" prefHeight="25.0" prefWidth="325.0" promptText="Country" />
-            <HBox prefHeight="25.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <ComboBox fx:id="stateProvinceComboBox" prefHeight="25.0" prefWidth="200.0" promptText="State/Province" />
-                  <TextField fx:id="postalCodeTextField" promptText="Postal Code" />
-               </children>
-            </HBox>
-            <ButtonBar prefHeight="25.0" prefWidth="280.0">
-              <buttons>
-                <Button fx:id="submitBtn" defaultButton="true" mnemonicParsing="false" onAction="#addCustomer" text="Submit" />
-                  <Button fx:id="cancelBtn" cancelButton="true" mnemonicParsing="false" onAction="#close" text="Cancel" />
-              </buttons>
-            </ButtonBar>
-         </children>
-      </VBox>
-   </children>
+   <VBox layoutX="117.0" layoutY="137.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0"
+         AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+         AnchorPane.topAnchor="0.0">
+      <Text fx:id="customerDetailsTitle" strokeType="OUTSIDE" strokeWidth="0.0" text="Customer Details"
+            wrappingWidth="325.0">
+         <font>
+            <Font size="24.0"/>
+         </font>
+      </Text>
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <Label fx:id="customerIdLbl" prefHeight="31.0" prefWidth="80.0" text="Customer ID:"/>
+         <TextField fx:id="customerIdTextField" disable="true" editable="false" prefWidth="200.0"
+                    promptText="Auto Generated"/>
+      </HBox>
+      <TextField fx:id="customerNameTextField" promptText="Full Name"/>
+      <TextField fx:id="customerAddressTextField" prefHeight="25.0" prefWidth="325.0" promptText="Street Address"/>
+      <ComboBox fx:id="countryComboBox" prefHeight="25.0" prefWidth="325.0" promptText="Country"/>
+      <HBox prefHeight="25.0" prefWidth="200.0" spacing="10.0">
+         <ComboBox fx:id="stateProvinceComboBox" prefHeight="25.0" prefWidth="200.0" promptText="State/Province"/>
+         <TextField fx:id="postalCodeTextField" promptText="Postal Code"/>
+      </HBox>
+      <TextField fx:id="phoneNumber" prefWidth="75.0" promptText="Phone Number"/>
+      <ButtonBar prefHeight="25.0" prefWidth="280.0">
+         <buttons>
+            <Button fx:id="submitBtn" defaultButton="true" mnemonicParsing="false" onAction="#addCustomer"
+                    text="Submit"/>
+            <Button fx:id="cancelBtn" cancelButton="true" mnemonicParsing="false" onAction="#close" text="Cancel"/>
+         </buttons>
+      </ButtonBar>
+   </VBox>
 </AnchorPane>
