--- a/src/Views/Calendar.fxml
+++ b/src/Views/Calendar.fxml
@@ -40,12 +40,15 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
@@ -58,7 +61,7 @@
                <items>
                   <Menu fx:id="addMenu" mnemonicParsing="false" text="Add...">
                      <items>
-                        <MenuItem fx:id="newAppointmentMenuItem" mnemonicParsing="false" text="Appointment" />
+                        <MenuItem fx:id="newAppointmentMenuItem" mnemonicParsing="false" onAction="#addAppointment" text="Appointment" />
                         <MenuItem fx:id="newCustomerMenuItem" mnemonicParsing="false" text="Customer" />
                      </items>
                   </Menu>
@@ -68,7 +71,7 @@
             </Menu>
             <Menu fx:id="editMenu" mnemonicParsing="false" text="Edit">
                <items>
-                  <MenuItem fx:id="editAppointmentMenuItem" mnemonicParsing="false" text="Appointment" />
+                  <MenuItem fx:id="editAppointmentMenuItem" mnemonicParsing="false" onAction="#updateAppointment" text="Appointment" />
                   <MenuItem fx:id="editCustomerMenuItem" mnemonicParsing="false" onAction="#updateCustomer" text="Customer" />
                </items>
             </Menu>
@@ -88,23 +91,41 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ButtonBar layoutX="453.0" layoutY="8.0" prefHeight="27.0" prefWidth="200.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+                  <ButtonBar layoutX="453.0" layoutY="8.0" prefHeight="27.0" prefWidth="336.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
                      <buttons>
+                        <RadioButton fx:id="weekViewRadio" mnemonicParsing="false" selected="true" text="Week">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="CalendarDuration" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="monthViewRadio" mnemonicParsing="false" text="Month" toggleGroup="$CalendarDuration" />
                         <MenuButton fx:id="addMenuButton" mnemonicParsing="false" text="New">
                            <items>
-                              <MenuItem fx:id="addAppointmentMenuItem" mnemonicParsing="false" text="Appointment" />
+                              <MenuItem fx:id="addAppointmentMenuItem" mnemonicParsing="false" onAction="#addAppointment" text="Appointment" />
                               <MenuItem fx:id="addCustomerMenuItem" mnemonicParsing="false" onAction="#addCustomer" text="Customer" />
                            </items>
                         </MenuButton>
                         <MenuButton fx:id="updateMenuButton" mnemonicParsing="false" text="Update">
                            <items>
-                              <MenuItem fx:id="updateAppointmentMenuItem" mnemonicParsing="false" text="Appointment" />
+                              <MenuItem fx:id="updateAppointmentMenuItem" mnemonicParsing="false" onAction="#updateAppointment" text="Appointment" />
                               <MenuItem fx:id="updateCustomerMenuItem" mnemonicParsing="false" onAction="#updateCustomer" text="Customer" />
                            </items>
                         </MenuButton>
                      </buttons>
                   </ButtonBar>
-                  <StackPane layoutX="236.0" layoutY="201.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: lightgrey;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="100.0" />
+                  <TableView fx:id="appointmentTableView" layoutX="236.0" layoutY="176.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="100.0">
+                    <columns>
+                      <TableColumn fx:id="appointmentId" prefWidth="75.0" text="ID" />
+                      <TableColumn fx:id="appointmentTitle" prefWidth="75.0" text="Title" />
+                        <TableColumn fx:id="appointmentDescription" prefWidth="75.0" text="Description" />
+                        <TableColumn fx:id="appointmentLocation" prefWidth="75.0" text="Location" />
+                        <TableColumn fx:id="appointmentContact" prefWidth="75.0" text="Contact" />
+                        <TableColumn fx:id="appointmentType" prefWidth="75.0" text="Type" />
+                        <TableColumn fx:id="appointmentStartDateTime" prefWidth="75.0" text="Start Date &amp; Time" />
+                        <TableColumn fx:id="appointmentEndDateTime" prefWidth="75.0" text="End Date &amp; Time" />
+                        <TableColumn fx:id="appointmentCustomerId" prefWidth="75.0" text="Customer ID" />
+                    </columns>
+                  </TableView>
                </children>
             </AnchorPane>
             <AnchorPane>
