--- a/src/Views/Calendar.fxml
+++ b/src/Views/Calendar.fxml
@@ -66,7 +66,7 @@
                      </items>
                   </Menu>
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem fx:id="logoutMenuItem" mnemonicParsing="false" text="Logout" />
+                  <MenuItem fx:id="logoutMenuItem" mnemonicParsing="false" onAction="#exitApplication" text="Logout" />
                </items>
             </Menu>
             <Menu fx:id="editMenu" mnemonicParsing="false" text="Edit">
