--- a/src/Views/AppointmentDetails.fxml
+++ b/src/Views/AppointmentDetails.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="418.0" prefWidth="348.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AppointmentDetails">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="348.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AppointmentDetails">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -29,13 +29,14 @@
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
                   <Label fx:id="appointmentIdLabel" prefHeight="17.0" prefWidth="116.0" text="Appointment ID: " />
-                  <TextField fx:id="appointmentIdTextfField" disable="true" prefHeight="25.0" prefWidth="205.0" promptText="Auto Generated" />
+                  <TextField fx:id="appointmentIdTextField" disable="true" prefHeight="25.0" prefWidth="205.0" promptText="Auto Generated" />
                </children>
             </HBox>
             <TextField fx:id="appointmentTitleTextField" prefWidth="280.0" promptText="Title" />
             <TextField fx:id="appointmentLocationTextField" prefWidth="280.0" promptText="Location" />
             <TextField fx:id="appointmentTypeTextField" promptText="Appointment Type" />
             <ComboBox fx:id="contactComboBox" prefHeight="25.0" prefWidth="337.0" promptText="Select Contact" />
+            <ComboBox fx:id="customerComboBox" prefHeight="25.0" prefWidth="337.0" promptText="Select Customer" />
             <HBox prefHeight="25.0" prefWidth="280.0" spacing="10.0">
                <children>
                   <DatePicker fx:id="startDatePicker" prefWidth="165.0" promptText="Start Date" />
