--- a/src/Views/Reports.fxml
+++ b/src/Views/Reports.fxml
@@ -16,7 +16,7 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <ComboBox fx:id="contactComboBox" editable="true" layoutX="49.0" layoutY="16.0" onAction="#selectContactSchedule" prefWidth="150.0" promptText="Select Contact" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="50.0" />
+      <ComboBox fx:id="contactComboBox" layoutX="49.0" layoutY="16.0" onAction="#selectContactSchedule" prefWidth="150.0" promptText="Select Contact" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="50.0" />
       <TableView fx:id="scheduleTable" layoutX="49.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="316.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="86.0">
         <columns>
           <TableColumn fx:id="idColumn" maxWidth="35.0" minWidth="35.0" prefWidth="35.0" resizable="false" text="ID" />
@@ -56,7 +56,7 @@
       <TableView fx:id="contactYearReportTable" layoutX="462.0" layoutY="372.0" prefHeight="200.0" prefWidth="232.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="416.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="350.0">
          <columns>
             <TableColumn fx:id="contactColumn" prefWidth="75.0" text="Contact" />
-            <TableColumn fx:id="yearColumn" prefWidth="75.0" text="Year" />
+            <TableColumn fx:id="contactYearColumn" prefWidth="75.0" text="Year" />
             <TableColumn fx:id="appointmentsByYearTotalColumn" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" resizable="false" text="Total" />
          </columns>
          <columnResizePolicy>
